assets/css/style.css
/* global styles */
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  background-color: #d9dcd6;
}

a {
  color: #ffffff;
  text-decoration: none;
}

/* styles for navbar */
.nav {
  padding: 20px;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
    'Lucida Sans', Arial, sans-serif;
  background-color: #2a607c;
  color: #ffffff;
}

.nav__logo {
  display: inline-block;
  font-size: 48px;
}

.nav__logo--emph {
  color: #d9dcd6;
}

.nav__menu {
  padding-top: 15px;
  margin-right: 20px;
  float: right;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 20px;
}

.menu {
  list-style-type: none;
}

.menu__item {
  display: inline-block;
  margin-left: 25px;
}

/* styles to let hero take up full page width */
.hero {
  height: 800px;
  width: 100%;
  margin-bottom: 25px;
}

/* styles for cards */
.card-container {
  width: 75%;
  display: inline-block;
  margin-left: 20px;
}

.card {
  margin-bottom: 20px;
  padding: 50px;
  height: 300px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: #0072bb;
  color: #ffffff;
}

.card__img {
  max-height: 200px;
}

.card__title {
  margin-bottom: 20px;
  font-size: 36px;
}

.card__img--float-left {
  float: left;
  margin-right: 25px;
}

.card__img--float-right {
  float: right;
  margin-left: 25px;
}

/* styles for sidebar */
.benefit-container {
  margin-right: 20px;
  padding: 20px;
  clear: both;
  float: right;
  width: 20%;
  height: 100%;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: #2589bd;
}

.benefit {
  margin-bottom: 32px;
  color: #ffffff;
}

.benefit__title {
  margin-bottom: 10px;
  text-align: center;
}

.benefit__icon {
  display: block;
  margin: 10px auto;
  max-width: 150px;
}

/* footer styles */
footer {
  padding: 30px;
  clear: both;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
    'Lucida Sans', Arial, sans-serif;
  text-align: center;
}

